# NanoGui_PlainText_widget

./: .gitignore  CMakeLists.txt  README.md
include/: plainText.h  plaintext2.h
src/: main.cpp  plainText.cpp  plaintext2.cpp
